# scanner_signature_app

./: Cargo.toml  Cargo.toml.additions  FLOW_DOCUMENTATION.md  PROJECT_ARCHITECTURE.md  build.rs  winit_dep.txt
.cargo/: config.toml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/inventyv/scannersigantureapp/: ExampleInstrumentedTest.kt
android/app/src/androidTest/java/com/inventyv/xilemgameactivity/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/inventyv/scannersigantureapp/: CameraManager.kt  MainActivity.kt  NativeBridge.kt  PreviewActivity.kt  ScannerActivity.kt  SignaturePadActivity.kt  SuccessActivity.kt
android/app/src/main/java/com/inventyv/xilemgameactivity/: MainActivity.kt
android/app/src/main/res/drawable/: button_secondary.xml
android/app/src/main/res/layout/: activity_main.xml  activity_preview.xml  activity_scanner.xml  activity_signature_pad.xml  activity_success.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/inventyv/scannersigantureapp/: ExampleUnitTest.kt
android/app/src/test/java/com/inventyv/xilemgameactivity/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
src/: android_bridge.rs  camera.rs  camera_widget.rs  image_assets.rs  lib.rs  state.rs  ui_components.rs
src/screens/: launch.rs  mod.rs  preview.rs  scanner.rs  signature_info.rs  signature_pad.rs  success.rs
