[package]
name = "scanner_signature_app"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]


[dependencies]
jni = "0.22.4"
masonry = "0.4.0"
masonry_winit = "0.4.0"
xilem = "0.4.0"
xilem_core = "0.4.0"
log = "0.4"
fontique = "0.6.0"
once_cell = "1"
tokio = { version = "1", features = ["rt", "time", "sync"] }
rqrr = "0.10.1"
image = "0.25.10"
serde_json = "1.0.149"
wgpu = "29.0.1"
futures = "0.3.32"
winit = { version = "0.30.13", features = ["android-game-activity"]} 

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6.1", features = ["game-activity"] }
winit = { version = "0.30.13", features = ["android-game-activity"] }
ndk = "0.9"
ndk-sys = "0.6"
android_logger = "0.13"
log ="0.4"

