[package]
name = "scanner_signature_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# ── Core UI stack ─────────────────────────────────────────────────────────────
# masonry 0.4 pulls in wgpu 0.26 internally — do NOT add wgpu here or you get
# two incompatible versions.  kurbo must match masonry's version (0.12).
xilem      = "0.4"
xilem_core = "0.4"
masonry    = "0.4"

# ── Window / event loop ───────────────────────────────────────────────────────
winit = { version = "0.30", features = ["android-game-activity"] }

# ── Android ───────────────────────────────────────────────────────────────────
android-activity = { version = "0.6", features = ["game-activity"] }
ndk-sys          = "0.6"
ndk-context      = "0.1"
android_logger   = "0.14"
ndk              = "0.9"           # base; extra features added in target block below

# ── JNI / libc ────────────────────────────────────────────────────────────────
jni  = "0.21"
libc = "0.2"

# ── Logging ───────────────────────────────────────────────────────────────────
log        = "0.4"
env_logger = "0.11"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# ── Fonts ─────────────────────────────────────────────────────────────────────
fontique = "0.6"

# ── QR decode — pure Rust, works on raw luma bytes ───────────────────────────
rqrr  = "0.10"
image = "0.25"

# ── Utilities ─────────────────────────────────────────────────────────────────
once_cell  = "1"
serde_json = "1.0"
scopeguard = "1"
smallvec   = "1"

# Pin kurbo to the exact version masonry 0.4 uses so Cargo deduplicates.
# masonry 0.4 uses kurbo 0.12 — keep in sync or you get type mismatches.
kurbo = "0.12"

# ── Android-only ──────────────────────────────────────────────────────────────
[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6", features = ["game-activity"] }
ndk = { version = "0.9", features = ["media", "api-level-24", "nativewindow"] }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
panic         = "unwind"

[profile.dev]
opt-level = 2

[patch.crates-io]
masonry_core = { path = "vendor/masonry_core-0.4.0" }